# FileOps

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  待处理文档.docx  模板.docx
_realtest/: real_formatted.docx
_realtest_compare/: detail_report.docx  待处理文档_adjusted.docx  待处理文档_compare_report.json
_realtest_compare_v2/: detail_report.docx  待处理文档_adjusted.docx  待处理文档_compare_report.json
_realtest_v3/: real_formatted.docx
docs/: ARCHITECTURE.md  DEVELOPMENT_SUMMARY.md  INSTALLATION.md  PRD.md
installer/: FileOps.iss
scripts/: build_exe.ps1  build_folio_cli.ps1  build_installer.ps1  entrypoint.py
src/fileops/: __init__.py  ai_assistant.py  cli.py  document_compare.py  document_convert.py  document_split.py  gui.py  models.py  operations.py  reporting.py  utils.py  word_template.py
tests/: conftest.py  test_document_compare.py  test_operations.py  test_word_template.py
